string leftovers (cont'd)